--- a/swimming-contest-software/src/main/resources/swimmingApp/fxml/login-view.fxml
+++ b/swimming-contest-software/src/main/resources/swimmingApp/fxml/login-view.fxml
@@ -8,7 +8,6 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Button layoutX="253.0" layoutY="282.0" mnemonicParsing="false" onAction="#loginButtonAction" prefHeight="54.0" prefWidth="93.0" text="Login" />
@@ -25,7 +24,7 @@
             <TextField fx:id="usernameTextField" GridPane.columnIndex="1" />
             <TextField fx:id="passwordTextField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
             <Label fx:id="usernameLabel" text="Username:" />
-            <Label fx:id="passwordLabel" text="Password" GridPane.rowIndex="1" />
+            <Label fx:id="passwordLabel" text="Password:" GridPane.rowIndex="1" />
          </children>
       </GridPane>
    </children>
