--- a/swimming-contest-software/src/main/resources/swimmingApp/fxml/login-view.fxml
+++ b/swimming-contest-software/src/main/resources/swimmingApp/fxml/login-view.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -22,9 +23,9 @@
         </rowConstraints>
          <children>
             <TextField fx:id="usernameTextField" GridPane.columnIndex="1" />
-            <TextField fx:id="passwordTextField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
             <Label fx:id="usernameLabel" text="Username:" />
             <Label fx:id="passwordLabel" text="Password:" GridPane.rowIndex="1" />
+            <PasswordField fx:id="passwordField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
          </children>
       </GridPane>
    </children>
