--- a/swimming-contest-software/src/main/resources/swimmingApp/fxml/main-view.fxml
+++ b/swimming-contest-software/src/main/resources/swimmingApp/fxml/main-view.fxml
@@ -1,21 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
 
 <AnchorPane prefHeight="512.0" prefWidth="814.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <TableView fx:id="racesTableView" layoutX="14.0" layoutY="14.0" prefHeight="356.0" prefWidth="345.0">
+      <TableView fx:id="racesTableView" layoutX="14.0" layoutY="52.0" prefHeight="430.0" prefWidth="383.0">
         <columns>
           <TableColumn fx:id="raceNumberColumn" prefWidth="48.799988746643066" text="No." />
-          <TableColumn fx:id="raceDistanceColumn" prefWidth="104.00002670288086" text="Distance" />
-            <TableColumn fx:id="raceStyleColumn" prefWidth="99.19996643066406" text="Style" />
-            <TableColumn fx:id="raceSwimmersNoColumn" prefWidth="93.60003662109375" text="Swimmers No." />
+          <TableColumn fx:id="raceDistanceColumn" prefWidth="111.99996566772461" text="Distance" />
+            <TableColumn fx:id="raceStyleColumn" prefWidth="108.80006408691406" text="Style" />
+            <TableColumn fx:id="raceSwimmersNoColumn" prefWidth="94.39996337890625" text="Swimmers No." />
         </columns>
       </TableView>
       <Button fx:id="logoutButton" layoutX="704.0" layoutY="449.0" mnemonicParsing="false" onAction="#logoutButtonAction" prefHeight="50.0" prefWidth="96.0" text="Logout" />
+      <Label layoutX="158.0" layoutY="17.0" text="Races">
+         <font>
+            <Font size="23.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
