--- a/swimming-contest-software/src/main/resources/swimmingApp/fxml/main-view.fxml
+++ b/swimming-contest-software/src/main/resources/swimmingApp/fxml/main-view.fxml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
 
@@ -18,11 +22,29 @@
             <TableColumn fx:id="raceSwimmersNoColumn" prefWidth="94.39996337890625" text="Swimmers No." />
         </columns>
       </TableView>
-      <Button fx:id="logoutButton" layoutX="704.0" layoutY="449.0" mnemonicParsing="false" onAction="#logoutButtonAction" prefHeight="50.0" prefWidth="96.0" text="Logout" />
+      <Button fx:id="logoutButton" layoutX="694.0" layoutY="431.0" mnemonicParsing="false" onAction="#logoutButtonAction" prefHeight="50.0" prefWidth="96.0" text="Logout" />
       <Label layoutX="158.0" layoutY="17.0" text="Races">
          <font>
             <Font size="23.0" />
          </font>
       </Label>
+      <GridPane layoutX="459.0" layoutY="144.0" prefHeight="122.0" prefWidth="330.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <Label text="Distance:" />
+            <Label text="Style:" GridPane.rowIndex="1" />
+            <ComboBox fx:id="distanceComboBox" prefWidth="150.0" GridPane.columnIndex="1" />
+            <ComboBox fx:id="styleComboBox" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <Button fx:id="searchSwimmersButton" mnemonicParsing="false" text="Search" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+         </children>
+      </GridPane>
    </children>
 </AnchorPane>
