--- a/swimming-contest-software/src/main/resources/swimmingApp/fxml/main-view.fxml
+++ b/swimming-contest-software/src/main/resources/swimmingApp/fxml/main-view.fxml
@@ -11,40 +11,34 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane prefHeight="512.0" prefWidth="814.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
-   <children>
-      <TableView fx:id="racesTableView" layoutX="14.0" layoutY="52.0" prefHeight="430.0" prefWidth="383.0">
-        <columns>
-          <TableColumn fx:id="raceNumberColumn" prefWidth="48.799988746643066" text="No." />
+    <TableView fx:id="racesTableView" layoutX="38.0" layoutY="58.0" prefHeight="430.0" prefWidth="330.0">
+      <columns>
           <TableColumn fx:id="raceDistanceColumn" prefWidth="111.99996566772461" text="Distance" />
-            <TableColumn fx:id="raceStyleColumn" prefWidth="108.80006408691406" text="Style" />
-            <TableColumn fx:id="raceSwimmersNoColumn" prefWidth="94.39996337890625" text="Swimmers No." />
-        </columns>
-      </TableView>
-      <Button fx:id="logoutButton" layoutX="694.0" layoutY="431.0" mnemonicParsing="false" onAction="#logoutButtonAction" prefHeight="50.0" prefWidth="96.0" text="Logout" />
-      <Label layoutX="158.0" layoutY="17.0" text="Races">
-         <font>
-            <Font size="23.0" />
-         </font>
-      </Label>
-      <GridPane layoutX="459.0" layoutY="144.0" prefHeight="122.0" prefWidth="330.0">
+          <TableColumn fx:id="raceStyleColumn" prefWidth="108.80006408691406" text="Style" />
+          <TableColumn fx:id="raceSwimmersNoColumn" prefWidth="94.39996337890625" text="Swimmers No." />
+      </columns>
+    </TableView>
+    <Button fx:id="logoutButton" layoutX="694.0" layoutY="431.0" mnemonicParsing="false" onAction="#logoutButtonAction" prefHeight="50.0" prefWidth="96.0" text="Logout" />
+    <Label layoutX="174.0" layoutY="23.0" text="Races">
+        <font>
+          <Font size="23.0" />
+        </font>
+    </Label>
+    <GridPane layoutX="459.0" layoutY="144.0" prefHeight="122.0" prefWidth="330.0">
         <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         </columnConstraints>
         <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
-         <children>
-            <Label text="Distance:" />
-            <Label text="Style:" GridPane.rowIndex="1" />
-            <ComboBox fx:id="distanceComboBox" prefWidth="150.0" GridPane.columnIndex="1" />
-            <ComboBox fx:id="styleComboBox" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <Button fx:id="searchSwimmersButton" mnemonicParsing="false" text="Search" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-         </children>
-      </GridPane>
-   </children>
+        <Label text="Distance:" />
+        <Label text="Style:" GridPane.rowIndex="1" />
+        <ComboBox fx:id="distanceComboBox" prefWidth="150.0" GridPane.columnIndex="1" />
+        <ComboBox fx:id="styleComboBox" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+        <Button fx:id="searchSwimmersButton" mnemonicParsing="false" onAction="#raceSearchAction" text="Search" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+    </GridPane>
 </AnchorPane>
