--- a/swimming-contest-software/src/main/resources/swimmingApp/fxml/race-view.fxml
+++ b/swimming-contest-software/src/main/resources/swimmingApp/fxml/race-view.fxml
@@ -10,8 +10,8 @@
       <columns>
           <TableColumn fx:id="firstNameColumn" prefWidth="85.60003662109375" text="First Name" />
           <TableColumn fx:id="lastNameColumn" prefWidth="64.79998779296875" text="Last Name" />
-          <TableColumn fx:id="ageColumn" prefWidth="75.0" text="Age" />
-          <TableColumn fx:id="racesEnrolledColumn" prefWidth="239.19998779296873" text="Races Enrolled" />
+          <TableColumn fx:id="ageColumn" prefWidth="68.0" text="Age" />
+          <TableColumn fx:id="racesEnrolledColumn" minWidth="500.0" prefWidth="246.39999999999998" text="Races Enrolled" />
       </columns>
     </TableView>
     <Button fx:id="goBackButton" layoutX="495.0" layoutY="338.0" mnemonicParsing="false" onAction="#goBackAction" prefHeight="47.0" prefWidth="91.0" text="Back" />
