--- a/swimming-contest-software/src/main/resources/swimmingApp/fxml/main-view.fxml
+++ b/swimming-contest-software/src/main/resources/swimmingApp/fxml/main-view.fxml
@@ -21,7 +21,7 @@
       </columns>
     </TableView>
     <Button fx:id="logoutButton" layoutX="694.0" layoutY="431.0" mnemonicParsing="false" onAction="#logoutButtonAction" prefHeight="50.0" prefWidth="96.0" text="Logout" />
-    <Label layoutX="174.0" layoutY="23.0" text="Races">
+    <Label layoutX="174.0" layoutY="14.0" text="Races">
         <font>
           <Font size="23.0" />
         </font>
@@ -44,22 +44,21 @@
     </GridPane>
     <GridPane layoutX="459.0" layoutY="243.0" prefHeight="142.0" prefWidth="330.0">
         <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         </columnConstraints>
         <rowConstraints>
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
-        <Label fx:id="firstNameLabel" text="First name:"/>
-        <Label fx:id="lastNameLabel" text="Last name:" GridPane.rowIndex="1"/>
-        <Label fx:id="ageLabel" text="Age:" GridPane.rowIndex="2"/>
-        <Button fx:id="addSwimmerButton" mnemonicParsing="false" onAction="#addSwimmerAction" text="Add swimmer"
-                GridPane.columnIndex="1" GridPane.rowIndex="3"/>
-        <TextField fx:id="firstNameTextField" GridPane.columnIndex="1"/>
-        <TextField fx:id="lastNameTextField" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
-        <TextField fx:id="ageTextField" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
+        <Label fx:id="firstNameLabel" text="First name:" />
+        <Label fx:id="lastNameLabel" text="Last name:" GridPane.rowIndex="1" />
+        <Label fx:id="ageLabel" text="Age:" GridPane.rowIndex="2" />
+        <Button fx:id="addSwimmerButton" mnemonicParsing="false" onAction="#addSwimmerAction" text="Add swimmer" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+        <TextField fx:id="firstNameTextField" GridPane.columnIndex="1" />
+        <TextField fx:id="lastNameTextField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+        <TextField fx:id="ageTextField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
     </GridPane>
 </AnchorPane>
