Remove password hashing. Client can connect to server, view number of swimmers per race, add swimmer. Update happens after every swimmer added.

--- a/swimming-contest-software/Client/src/main/resources/client/fxml/main-view.fxml
+++ b/swimming-contest-software/Client/src/main/resources/client/fxml/main-view.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="512.0" prefWidth="814.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane prefHeight="512.0" prefWidth="1340.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
     <TableView fx:id="racesTableView" layoutX="38.0" layoutY="58.0" prefHeight="430.0" prefWidth="330.0">
       <columns>
           <TableColumn fx:id="raceDistanceColumn" prefWidth="111.99996566772461" text="Distance" />
@@ -20,7 +20,7 @@
           <TableColumn fx:id="raceSwimmersNoColumn" prefWidth="94.39996337890625" text="Swimmers No." />
       </columns>
     </TableView>
-    <Button fx:id="logoutButton" layoutX="694.0" layoutY="431.0" mnemonicParsing="false" onAction="#logoutButtonAction" prefHeight="50.0" prefWidth="96.0" text="Logout" />
+    <Button fx:id="logoutButton" layoutX="528.0" layoutY="437.0" mnemonicParsing="false" onAction="#logoutButtonAction" prefHeight="50.0" prefWidth="96.0" text="Logout" />
     <Label layoutX="174.0" layoutY="14.0" text="Races">
         <font>
           <Font size="23.0" />
@@ -61,4 +61,12 @@
         <TextField fx:id="lastNameTextField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
         <TextField fx:id="ageTextField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
     </GridPane>
+   <TableView fx:id="raceSwimmersTableView" layoutX="835.0" layoutY="48.0" prefHeight="441.0" prefWidth="466.0">
+      <columns>
+         <TableColumn fx:id="firstNameColumn" prefWidth="85.60003662109375" text="First Name" />
+         <TableColumn fx:id="lastNameColumn" prefWidth="64.79998779296875" text="Last Name" />
+         <TableColumn fx:id="ageColumn" prefWidth="68.0" text="Age" />
+         <TableColumn fx:id="racesEnrolledColumn" minWidth="500.0" prefWidth="246.39999999999998" text="Races Enrolled" />
+      </columns>
+   </TableView>
 </AnchorPane>
